Upgrade to SpringBoot 4 + Spring 7 (#256)
* OpenRewrite upgraded to SpringBoot4 (+ couple of changes)

- possibly problem with Jackson as it seems that HATEOAS is stuck with Jackson2 while SpringBoot4 requires Jackson3

* springboot 4 + jackson2 -> jackson3 upgrade WIP

* app compiles after upgrades - WIP (not tested yet)

- added missing restclient autoconfiguration + fixed oris API client configuration
- tests compile successfully and 53 of 75 passes

* Removed duplicate anyRequest error from authorization server configuration

* Add SimpleCacheManager bean to CachingConfiguration - newly missing bean in Spring 7

* App starts and mostly works (except properties order in HAL+FORMS metadata)

* Fixed NPE in BeanDescription obtaining in ImprovedHalFormsAffordanceModel

* little cleanup

* corrected wrong dependencies after migration - need to use BOOT dependencies to property startup all necessary stuff (like `@WithMockUser`, etc)

* Refactored to modelPreparator + modelAssembler

* Updated HAL+FORMS tests + added test to check default template behavior change after upgrade

* KlabisSecurityService prints out if authetnication has unexpected type

* Removed unnecessary dependencies from ApiTestConfiguration + removed "restapi.context" (replaced with ModelPreparator's improved addLinks methods)

* Fixed Caching configuration + ORIS sync of event without classes (CSOS trainers workshow - 9703

* HalNavigator updated - Spring HATEOAS 3 dropped "default" template :)

* fixed missing path parameter for cancelRegistration endpoint

* Added missing collection links to PagedModel + some cleanups